align the chat-views position to the bottom of the page to overcome view-height bugs (#593)
* align the chat-views position to the bottom of the page

* introduce a media query to make chat scrolling work on mobile

--- a/webroot/styles/chat.css
+++ b/webroot/styles/chat.css
@@ -3,11 +3,17 @@
 #chat-container {
   position: fixed;
   z-index: 9;
-  top: var(--header-height);
+  bottom: 0;
   right: 0;
   width: var(--right-col-width);
 
   height: calc(100vh - var(--header-height));
+}
+
+@media screen and (max-width: 729px) {
+  #chat-container {
+    top: var(--header-height);
+  }
 }
 
 #message-input-container {
